add unit test and add documentation
